<resources>
    <string name="app_name">Sistem Pakar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">Riwayat</string>
    <string name="title_diagnosa">Diagnosa</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="validasi_login">“Pemeliharaan sarana dan prasarana merupakan kewajiban seluruh civitas akademika Politeknik ATI Padang. Dengan ini pelopor menyatakan telah melakukan usaha perbaikan semaksimal mungkin dan belum berhasil sehingga membutuhkan tindak lanjut.”</string>
    <string name="name">Aditya ahmad nugraha</string>
    <string name="nama">Nama</string>
    <string name="jenis">Jenis</string>
    <string name="jenis_status">Kamtibmas</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="prasarana">Prasarana</string>
    <string name="sarana">Sarana</string>
    <string name="kamtibmas">kamtibmas</string>
    <string name="status">Status</string>
    <string name="history_pelaporan">History Pelaporan</string>
    <string name="laporan_sarana">Laporan Sarana</string>
    <string name="lcd_proyektor">LCD Proyektor</string>
    <string name="rp">Rp</string>
    <string name="jumlah_pelapor">3</string>
    <string name="email">EMAIL</string>
    <string name="alamat_email">adity@gmail.com</string>
    <string name="no_hp">NO TELEPHONE</string>
    <string name="no_tlp">+0812993293293</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_lengkap">Jl.Dr.Sutomo</string>
    <string name="keluar">Keluar</string>
    <string name="jabatan">Manager</string>
    <string name="hari_tanggal">Tanggal :</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_kejadian">Waktu Kejadian:</string>
    <string name="laporan_sarana_title">Laporan Sarana</string>
    <string name="title_pengaduan">Pengaduan</string>
    <string name="senin_25_september_2023">Tanggal/Bulan/Tahun</string>
    <string name="ddhh">00:00</string>
    <string name="merk">Merk :</string>
    <string name="jenis_kerusakan">Jenis Kerusakan :</string>
    <string name="masukan_merk_produk">Masukan Merk Produk</string>
    <string name="masukan_jenis_kerusakan">Masukan Jenis Kerusakan</string>
    <string name="masukan_lokasi_anda">Masukan Lokasi Anda</string>
    <string name="deskripsi_kerusakan">Deskripsi Kerusakan :</string>
    <string name="deskripsi_status">Kerusakan dikarenakan kebocoran</string>
    <string name="deskripsi_kejadian">Deskripsi Kejadian :</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="upload_foto">Upload Foto :</string>
    <string name="status_laporan">Status Laporan</string>
    <string name="laporan_prasarana">Laporan Prasarana</string>
    <string name="laporan_kamtibmas">Laporan Kamtibmas</string>
    <string name="lcd_proyektor_chip">LCD Proyektor</string>
    <string name="ac">AC</string>
    <string name="air">Air</string>
    <string name="instalasi_listrik">Instalasi Listrik</string>
    <string name="printer">Printer</string>
    <string name="peralatan_praktikum">Peralatan Praktikum</string>
    <string name="bangunan">Bangunan</string>
    <string name="ruang_terbuka">Ruang Terbuka</string>
    <string name="lokasi">Lokasi :</string>
    <string name="lokasi_detail">Lokasi</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="masukan_username">masukan username</string>
    <string name="masukan_password">masukan password</string>
    <string name="useraname">useraname</string>
    <string name="masuk_ke_akun_anda">Masuk Ke Akun Anda</string>
    <string name="format_tgl">21 Setember 2023</string>
    <string name="kirim">Kirim</string>
    <string name="must_not_empty">Form Tidak Boleh Kosong</string>
    <string name="logoutMessage">Are you sure want to logout?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="hello_user">%1$s</string>
    <string name="laporan_anda_sudah_selesai_dikerjakan">Laporan anda sudah selesai dikerjakan</string>
    <string name="sedang_di_kerjakan_oleh_eleanor">Sedang di kerjakan oleh eleanor</string>
    <string name="sudah_di_terima_admin">Sudah di terima admin</string>
    <string name="kembali">Kembali</string>
    <string name="galery">Galery</string>
    <string name="camera">Camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type :</string>
    <string name="deskripsi_kerusakan_admin">Deskripsi Kerusakan :</string>
    <string name="diposisikan_kepada">Diposisikan Kepada :</string>
    <string name="fillUpInput">Input tidak boleh kosong</string>
    <string name="choosePhotoFirst">Pilih foto terlebih dahulu</string>
    <string name="pick_photo_first">Pilih foto dulu</string>
    <string name="title_activity_nontofikasi_laporan_teknisi">ActivityNontofikasiLaporanTeknisi
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tidak">Tidak</string>
    <string name="tidak_tahu">Tidak Tahu</string>
    <string name="mungkin_tidak">Mungkin Tidak</string>
    <string name="mungkin_iya">Mungkin Iya</string>
    <string name="hampir_pasti_iya">Hampir Pasti Iya</string>
    <string name="pasti_iya">Pasti Iya</string>
    <string name="mulai_diagnosa">Mulai Diagnosa</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <string name="gejala">Gejala</string>
    <string name="penyakit">Penyakit</string>
    <string name="enter_password">Enter Password</string>
    <string name="more_than_character">More than 6 character</string>
    <string name="enter_email">Enter Email</string>
    <string name="not_type_email">Wrong email format (@)</string>
</resources>