<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/g_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/c_printer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppinssembiold"
                android:textColor="@color/black"
                android:layout_marginEnd="4dp"
                android:text="@string/printer" />

            <com.google.android.material.chip.Chip
                android:id="@+id/c_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppinssembiold"
                android:layout_marginEnd="4dp"
                android:text="@string/ac" />

            <com.google.android.material.chip.Chip
                android:id="@+id/c_LCD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppinssembiold"
                android:layout_marginEnd="4dp"
                android:text="@string/lcd_proyektor_chip" />


            <com.google.android.material.chip.Chip
                android:id="@+id/c_peralatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppinssembiold"
                android:layout_marginEnd="4dp"
                android:text="@string/peralatan_praktikum" />

        </LinearLayout>

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>