<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.laporan.sarana.SaranaActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsextrabold"
                android:text="@string/laporan_sarana_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_back" />


            <HorizontalScrollView
                android:id="@+id/sc_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:singleSelection="true">


                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsextrabold"
                            android:text="@string/printer"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:chipBackgroundColor="#ffffff"
                            app:chipCornerRadius="6dp"
                            app:chipStrokeColor="@color/background_chip"
                            app:chipStrokeWidth="2dp" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsextrabold"
                            android:text="@string/ac"
                            android:textSize="12sp"
                            app:chipBackgroundColor="#ffffff"
                            app:chipCornerRadius="6dp"
                            app:chipStrokeColor="@color/background_chip"
                            app:chipStrokeWidth="2dp" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsextrabold"
                            android:text="@string/lcd_proyektor_chip"
                            android:textSize="12sp"
                            app:chipBackgroundColor="#ffffff"
                            app:chipCornerRadius="6dp"
                            app:chipStrokeColor="@color/background_chip"
                            app:chipStrokeWidth="2dp" />


                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsextrabold"
                            android:text="@string/peralatan_praktikum"
                            android:textSize="12sp"
                            app:chipBackgroundColor="#ffffff"
                            app:chipCornerRadius="6dp"
                            app:chipStrokeColor="@color/background_chip"
                            app:chipStrokeWidth="2dp" />


                    </com.google.android.material.chip.ChipGroup>

                </RelativeLayout>


            </HorizontalScrollView>

            <TextView
                android:id="@+id/txt_hari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/hari_tanggal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sc_chip" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_tanggal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_hari">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:fontFamily="@font/poppinssembiold"
                    android:hint="@string/senin_25_september_2023"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/txt_lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lokasi"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/il_tanggal"
                app:layout_constraintTop_toBottomOf="@+id/il_tanggal" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_lokasi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_lokasi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinssembiold"
                    android:hint="@string/masukan_lokasi_anda"
                    android:maxLength="100"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/txt_jenis_kerusakan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Merk :"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/il_tanggal"
                app:layout_constraintTop_toBottomOf="@+id/il_lokasi" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_merk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_jenis_kerusakan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_merk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinssembiold"
                    android:hint="@string/masukan_merk_produk"
                    android:maxLength="25"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_deskripsi_kerusakan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/deskripsi_kerusakan"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/il_tanggal"
                app:layout_constraintTop_toBottomOf="@+id/il_merk" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_deskripsi_kerusakan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_deskripsi_kerusakan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deskripsi_kerusakan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinssembiold"
                    android:gravity="top"
                    android:hint="@string/deskripsi_kerusakan"
                    android:maxLength="500"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_upload_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppinssembiold"
                android:text="@string/upload_foto"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/il_tanggal"
                app:layout_constraintTop_toBottomOf="@+id/il_deskripsi_kerusakan" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/camera"
                app:layout_constraintEnd_toEndOf="@+id/txt_upload_foto"
                app:layout_constraintStart_toStartOf="@+id/txt_upload_foto"
                app:layout_constraintTop_toBottomOf="@+id/txt_upload_foto" />

            <TextView
                android:id="@+id/txt_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsblack"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/camera"
                app:layout_constraintStart_toStartOf="@+id/camera"
                app:layout_constraintTop_toBottomOf="@+id/camera" />


            <ImageView
                android:id="@+id/galery"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/galery"
                app:layout_constraintStart_toEndOf="@+id/camera"
                app:layout_constraintTop_toTopOf="@+id/camera" />

            <TextView
                android:id="@+id/txt_galery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsblack"
                android:text="@string/galery"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/galery"
                app:layout_constraintStart_toStartOf="@+id/galery"
                app:layout_constraintTop_toBottomOf="@+id/galery" />


            <ImageView
                android:id="@+id/img_foto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="@+id/camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/camera"
                app:layout_constraintTop_toTopOf="@+id/camera" />

            <Button
                android:id="@+id/btn_kirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/blue"
                android:text="@string/kirim"
                android:textSize="24sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_foto" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btn_kirim"
                app:layout_constraintEnd_toEndOf="@+id/btn_kirim"
                app:layout_constraintStart_toStartOf="@+id/btn_kirim"
                app:layout_constraintTop_toTopOf="@+id/btn_kirim"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>